force-app/main/default/objects/Contact/fields/Activity_Mass_Update_on_Contact__c.field-meta.xml
<CustomField>
    <fullName>Activity_Mass_Update_on_Contact__c</fullName>
    <label>Activity Mass Update on Contact</label>
    <type>TextArea</type>
</CustomField>