force-app/main/default/objects/Contact/fields/BounceEmailAddress__c.field-meta.xml
<CustomField>
    <fullName>BounceEmailAddress__c</fullName>
    <label>Bounced Email Address</label>
    <length>255</length>
    <type>Text</type>
</CustomField>