force-app/main/default/objects/Contact/fields/Contact_Notes__c.field-meta.xml
<CustomField>
    <fullName>Contact_Notes__c</fullName>
    <label>Contact Notes</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>