force-app/main/default/objects/Contact/fields/Contact_s_Location__c.field-meta.xml
<CustomField>
    <fullName>Contact_s_Location__c</fullName>
    <label>Contact&apos;s Location</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Mainland China</fullName>
            </value>
            <value>
                <fullName>Hong Kong</fullName>
            </value>
            <value>
                <fullName>Taiwan</fullName>
            </value>
            <value>
                <fullName>Asia outside of China</fullName>
            </value>
            <value>
                <fullName>Western</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>