force-app/main/default/objects/Contact/fields/Data_Migration_No__c.field-meta.xml
<CustomField>
    <fullName>Data_Migration_No__c</fullName>
    <label>Data Migration No.</label>
    <length>255</length>
    <type>Text</type>
</CustomField>