force-app/main/default/objects/Contact/fields/Department_picklist__c.field-meta.xml
<CustomField>
    <fullName>Department_picklist__c</fullName>
    <label>Department (picklist)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Chef/Culinary</fullName>
            </value>
            <value>
                <fullName>Communications</fullName>
            </value>
            <value>
                <fullName>CSR</fullName>
            </value>
            <value>
                <fullName>Food Safety/Quality</fullName>
            </value>
            <value>
                <fullName>Management</fullName>
            </value>
            <value>
                <fullName>Marketing</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Procurement</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>