force-app/main/default/objects/Contact/fields/Email_Send_Date__c.field-meta.xml
<CustomField>
    <fullName>Email_Send_Date__c</fullName>
    <label>Email Send Date</label>
    <type>DateTime</type>
</CustomField>