force-app/main/default/objects/Contact/fields/File_Attachments__c.field-meta.xml
<CustomField>
    <fullName>File_Attachments__c</fullName>
    <label>File Attachments</label>
    <length>1024</length>
    <type>LongTextArea</type>
</CustomField>