force-app/main/default/objects/Contact/fields/Left_the_Company_del__c.field-meta.xml
<CustomField>
    <fullName>Left_the_Company_del__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>For regular use. Please manually update from the checkbox named &apos;Left the Company_to be transferred&apos; at the bottom.</inlineHelpText>
    <label>Left the Company</label>
    <type>Checkbox</type>
</CustomField>