force-app/main/default/objects/Contact/fields/LilyTse_Contact_Label__c.field-meta.xml
<CustomField>
    <fullName>LilyTse_Contact_Label__c</fullName>
    <label>LilyTse Contact Label</label>
    <type>TextArea</type>
</CustomField>