force-app/main/default/objects/Contact/fields/Linkedin_FB_Others__c.field-meta.xml
<CustomField>
    <fullName>Linkedin_FB_Others__c</fullName>
    <label>Linkedin/FB/Others</label>
    <type>TextArea</type>
</CustomField>