force-app/main/default/objects/Contact/fields/List_Email_field_1__c.field-meta.xml
<CustomField>
    <fullName>List_Email_field_1__c</fullName>
    <label>List Email field 1</label>
    <type>TextArea</type>
</CustomField>