force-app/main/default/objects/Contact/fields/List_Email_field_2__c.field-meta.xml
<CustomField>
    <fullName>List_Email_field_2__c</fullName>
    <label>List Email field 2</label>
    <type>TextArea</type>
</CustomField>