force-app/main/default/objects/Contact/fields/List_Email_field_3__c.field-meta.xml
<CustomField>
    <fullName>List_Email_field_3__c</fullName>
    <label>List Email field 3</label>
    <type>TextArea</type>
</CustomField>