force-app/main/default/objects/Contact/fields/Note_on_Email__c.field-meta.xml
<CustomField>
    <fullName>Note_on_Email__c</fullName>
    <label>Note on Email</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>