force-app/main/default/objects/Contact/fields/Point_of_contact__c.field-meta.xml
<CustomField>
    <fullName>Point_of_contact__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Point of contact</label>
    <type>Checkbox</type>
</CustomField>