force-app/main/default/objects/Contact/fields/Salutation_CN_del__c.field-meta.xml
<CustomField>
    <fullName>Salutation_CN_del__c</fullName>
    <label>Salutation(CN)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>先生</fullName>
            </value>
            <value>
                <fullName>女士</fullName>
            </value>
            <value>
                <fullName>总</fullName>
            </value>
            <value>
                <fullName>经理</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>