force-app/main/default/objects/Contact/listViews/Committed_Company_List_2021_Nov.listView-meta.xml
<ListView>
    <fullName>Committed_Company_List_2021_Nov</fullName>
    <columns>FULL_NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>CONTACT.TITLE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Account.Account_Auto_Cage_free_Commitment__c</field>
        <operation>equals</operation>
        <value>Full Asia commitment</value>
    </filters>
    <label>Committed Company List 2021 Nov</label>
</ListView>