force-app/main/default/objects/Contact/listViews/Reach_out_1.listView-meta.xml
<ListView>
    <fullName>Reach_out_1</fullName>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>FULL_NAME</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>List_Email_field_1__c</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CONTACT.EMAIL</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>FULL_NAME</field>
        <operation>contains</operation>
        <value>general</value>
    </filters>
    <filters>
        <field>ACCOUNT.OWNER.FIRST_NAME</field>
        <operation>equals</operation>
        <value>kirsty</value>
    </filters>
    <label>Reach out 1</label>
</ListView>