force-app/main/default/objects/Contact/listViews/Reach_Out_2.listView-meta.xml
<ListView>
    <fullName>Reach_Out_2</fullName>
    <columns>FULL_NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>Account.Trade_Name__c</columns>
    <columns>List_Email_field_1__c</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>CONTACT.TITLE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Account.Trade_Name__c</field>
        <operation>contains</operation>
        <value>Hana,Imperial,Elephant,Tea WG,Patisserie,Muji,Pokka,Shaz,Ocean Park,BreadTalk,Mango Tree,Pepper Lunch,Associated,Tim Ho Wan,JIA Group,Chateraise,Butcher&apos;s,Robuchon,Cova</value>
    </filters>
    <label>Reach Out 2</label>
</ListView>