force-app/main/default/objects/Contact/listViews/Salesforce_Support.listView-meta.xml
<ListView>
    <fullName>Salesforce_Support</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>FULL_NAME</columns>
    <columns>CONTACT.TITLE</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>Account.Food_Industry_Sector__c</columns>
    <columns>List_Email_field_1__c</columns>
    <columns>CONTACT.LAST_NAME</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>CONTACT.EMAIL</field>
        <operation>notEqual</operation>
        <value>blank</value>
    </filters>
    <label>Salesforce Support</label>
</ListView>